# nx-monorepo-blueprint

./: Cargo.toml  README.md  nx.json  package-lock.json  package.json
apps/rust_forge_boilerplate/: .env.example  Cargo.toml
apps/rust_forge_boilerplate/cmd/migrator/: main.rs
apps/rust_forge_boilerplate/cmd/scheduler/: main.rs
apps/rust_forge_boilerplate/cmd/worker/: main.rs
apps/rust_forge_boilerplate/common/utils/: error.rs
apps/rust_forge_boilerplate/deployment/: docker-compose.yml
apps/test_cleanup/: Cargo.toml  project.json
apps/test_cleanup/cmd/migrator/: main.rs
apps/test_cleanup/cmd/scheduler/: main.rs
apps/test_cleanup/cmd/seeder/: main.rs
apps/test_cleanup/cmd/server/: main.rs
apps/test_cleanup/cmd/worker/: main.rs
apps/test_cleanup/deployment/: docker-compose.yml
apps/test_cleanup/healthcheck_modules/: handler.rs
apps/user_services/: Cargo.toml  QUICKSTART.md  README.md  STRUCTURE.md  lib.rs  project.json
apps/user_services/cmd/migrator/: main.rs
apps/user_services/cmd/scheduler/: main.rs
apps/user_services/cmd/seeder/: main.rs
apps/user_services/cmd/server/: main.rs
apps/user_services/cmd/worker/: main.rs
apps/user_services/common/: error.rs
apps/user_services/common/utils/: hash.rs  mod.rs
apps/user_services/deployment/: Dockerfile.migrator  Dockerfile.scheduler  Dockerfile.seeder  Dockerfile.server  Dockerfile.worker  README.md  docker-compose.yml
apps/user_services/healthcheck_modules/: README.md  handler.rs
apps/user_services/migrations/: 20251209081449_user.up.sql
apps/user_services/user_modules/: dto.rs  handler.rs  mod.rs  repo.rs  service.rs
tools/: create-rust-app.js
tools/rust_app_template/: .env.example  Cargo.toml  project.json
tools/rust_app_template/cmd/migrator/: main.rs
tools/rust_app_template/cmd/scheduler/: main.rs
tools/rust_app_template/cmd/seeder/: main.rs
tools/rust_app_template/cmd/server/: main.rs
tools/rust_app_template/cmd/worker/: main.rs
tools/rust_app_template/common/utils/: error.rs
tools/rust_app_template/healthcheck_modules/: handler.rs
