[package]
name = "rust_app_template"
version = "0.1.0"
edition = "2024"
default-run = "server"

[lib]
path = "lib.rs"

[dependencies]
home =  { workspace = true } 
# Web Framework
actix-web =  { workspace = true } 
actix-rt =  { workspace = true } 
actix-cors =  { workspace = true } 

# Async Runtime
tokio = { workspace = true }

# Serialization
serde =  { workspace = true } 
serde_json =  { workspace = true } 
# Database
sqlx = { workspace = true } 
mongodb =  { workspace = true } 
redis =  { workspace = true } 

# Validation
validator =  { workspace = true } 

# Logging & Tracing
tracing = { workspace = true } 
tracing-subscriber =  { workspace = true } 
tracing-actix-web =  { workspace = true } 

# Configuration
dotenv =  { workspace = true } 

# Utils
chrono = { workspace = true } 
uuid =  { workspace = true } 

# Scheduler
tokio-cron-scheduler = { workspace = true } 

# Worker
async-trait = { workspace = true } 

[[bin]]
name = "server"
path = "cmd/server/main.rs"

[[bin]]
name = "worker"
path = "cmd/worker/main.rs"

[[bin]]
name = "scheduler"
path = "cmd/scheduler/main.rs"

[[bin]]
name = "migrator"
path = "cmd/migrator/main.rs"

[[bin]]
name = "seeder"
path = "cmd/seeder/main.rs"
